k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cal-app-ingress
  namespace: dev-namespace
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:982424467695:certificate/34d44a22-a45b-4cfb-a5bc-7a4fc25998e3
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-Res-2021-06
spec:
  rules:
  - host: game.awswithavinashreddy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cal-service
            port:
              number: 8080
  - host: 2048.awswithavinashreddy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game-2048-service
            port:
              number: 80
